deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-together-online-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.org/websocket-services: "api-service"
spec:
  ingressClassName: nginx
  rules:
    - host: game-together.online
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-service
                port:
                  number: 4000
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-client-service
                port:
                  number: 80
